delete product logic added
